# jira-cli

./: Cargo.toml
jira-api/: Cargo.toml
jira-api/src/: lib.rs
jira-api/src/model/: get_announcement_banner.rs  list_application_roles.rs  list_issue_picker_suggestions.rs  mod.rs
jira-cli/: Cargo.toml
jira-cli/src/: main.rs
jira-cli/src/presentation/: announcement_banner.rs  application_roles.rs  command.rs  issue_search.rs  mod.rs
